--- a/streaming-example/pom.xml
+++ b/streaming-example/pom.xml
@@ -42,4 +42,23 @@
         <scope>provided</scope>
     </dependency>
 </dependencies>
+    <build>
+    <plugins>
+        <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.2</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib</classpathPrefix>
+                            <mainClass>org.example.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+
+    </plugins>
+</build>
 </project>
